--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,9 @@
       "request": "launch",
       "mode": "auto",
       "program": "${workspaceFolder}",
-      "env": {},
+      "env": {
+        "TERM": "xterm-256color"
+      },
       "args": []
     }
   ]
